fix: 영화 상세보기 모달 관련 문제 수정 - 데이터 로딩하는 동안 로딩 중 상태 표시 - 이미지가 로딩으로 인한 layout shift 문제 해결 - 마크업 로직 분리

--- a/templates/common.css
+++ b/templates/common.css
@@ -242,6 +242,7 @@ header .search-box > .search-button {
 }
 
 .modal-content > .movie-poster {
+  min-width: 292px;
   width: 292px;
   height: 433px;
   background-size: contain;
@@ -375,10 +376,21 @@ header > .search-box-creator {
     color: #f1f1f1;
   }
 }
-/* 
 
-적용대상
-- header
-- list
-- modal
-*/
+.spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #f33f3f;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
